--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "passport": "^0.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "redis": "^3.1.2",
     "sass": "^1.41.0",
     "typescript": "^4.4.3",
