--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "pinch",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
   "scripts": {
-    "start": "nodemon ./server/app.js",
+    "start": "nodemon ./server/app.ts",
     "test": "jest",
     "build-ci": "webpack",
     "build-app": "webpack --watch",
@@ -46,6 +45,9 @@
     "webpack-dev-server": "^4.2.1"
   },
   "devDependencies": {
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
     "eslint": "^7.32.0",
@@ -54,6 +56,9 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "nodemon": "^2.0.13",
+    "ts-loader": "^9.2.6",
+    "ts-node": "^10.2.1"
   }
 }
