--- a/package.json
+++ b/package.json
@@ -21,11 +21,8 @@
   },
   "homepage": "https://github.com/gregorymacat/Pinch#readme",
   "dependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
+    "@types/express": "^4.17.13",
     "axios": "^0.21.4",
-    "babel-loader": "^8.2.2",
     "bulma": "^0.9.3",
     "express": "^4.17.1",
     "graphql": "^15.5.3",
