--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pinch",
   "version": "1.0.0",
   "description": "",
+  "main": "webpack.config.js",
   "scripts": {
     "start": "nodemon ./server/app.ts",
     "test": "jest",
