--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
   "homepage": "https://github.com/gregorymacat/Pinch#readme",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-express": "^2.25.2",
     "axios": "^0.21.4",
     "bulma": "^0.9.3",
     "express": "^4.17.1",
-    "graphql": "^15.5.3",
+    "express-session": "^1.17.2",
+    "graphql": "^15.6.0",
+    "graphql-passport": "^0.6.4",
     "jest": "^27.2.0",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
@@ -43,6 +47,7 @@
     "webpack-dev-server": "^4.2.1"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.4",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.3.0",
