--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "nodemon ./server/app.ts",
+    "start": "nodemon ./server/index.js",
     "test": "jest",
     "build-ci": "webpack",
     "build-app": "webpack --watch",
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/gregorymacat/Pinch#readme",
   "dependencies": {
+    "@apollo/client": "^3.4.15",
     "@types/express": "^4.17.13",
+    "apollo-boost": "^0.4.9",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^2.25.2",
     "axios": "^0.21.4",
     "bulma": "^0.9.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.6.0",
@@ -41,6 +44,8 @@
     "redis": "^3.1.2",
     "sass": "^1.41.0",
     "typescript": "^4.4.3",
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.12",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev": "^1.1.1",
