--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bulma": "^0.9.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "graphql": "^15.6.0",
     "graphql-passport": "^0.6.4",
