--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-session": "^1.17.2",
     "graphql": "^15.6.0",
     "graphql-passport": "^0.6.4",
+    "hash-router": "^0.4.0",
     "jest": "^27.2.0",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
