--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bulma": "^0.9.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "css-loader": "^6.4.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
@@ -43,6 +44,7 @@
     "passport": "^0.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-phone-input-2": "^2.14.0",
     "react-router-dom": "^5.3.0",
     "redis": "^3.1.2",
     "sass": "^1.41.0",
