--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "nodemon ./server/index.js",
+    "start": "concurrently \"nodemon ./server/index.js\" \"nodemon ./api/app.js\"",
     "test": "jest",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "build-ci": "webpack",
@@ -12,6 +12,7 @@
     "build-style": "sass --watch public/assets/styles/input.scss:public/assets/styles/output.css",
     "fix-lock": "npm install --package-lock-only"
   },
+  "proxy": "http://localhost:3000",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gregorymacat/Pinch.git"
@@ -30,6 +31,7 @@
     "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "bulma": "^0.9.3",
+    "concurrently": "^6.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "css-loader": "^6.4.0",
@@ -40,12 +42,15 @@
     "graphql-passport": "^0.6.4",
     "hash-router": "^0.4.0",
     "jest": "^27.2.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "plaid": "^9.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-phone-input-2": "^2.14.0",
+    "react-plaid-link": "^3.2.1",
     "react-router-dom": "^5.3.0",
     "redis": "^3.1.2",
     "sass": "^1.41.0",
