--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "concurrently \"nodemon ./server/index.js\" \"nodemon ./api/app.js\"",
+    "start": "nodemon ./server/index.js",
     "test": "jest",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "build-ci": "webpack",
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "css-loader": "^6.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
