--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "css-loader": "^6.4.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
     "express-session": "^1.17.2",
     "graphql": "^15.6.0",
     "graphql-passport": "^0.6.4",
@@ -50,6 +49,7 @@
     "plaid": "^9.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-phone-input-2": "^2.14.0",
     "react-plaid-link": "^3.2.1",
     "react-router-dom": "^5.3.0",
