--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.0.6",
     "morgan": "^1.10.0",
+    "npm": "^8.1.3",
     "passport": "^0.4.1",
     "plaid": "^9.4.0",
     "react": "^17.0.2",
